tui/tests/snapshots/view_snapshots__turn_navigator_compact_mono_40x12.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&turns, Theme::Mono, 40, 12)"
---
  ╭ Jump to a Turn ──────────────────╮
  │                                  │
  │  Search  release                 │
  │     2  release checkpoint 01 …   │
  │  ›  3  release checkpoint 02 …   │
  │    ↑/↓ select   Home/End edge    │
  │    Enter jump   Esc close        │
  │                                  │
  ╰──────────────────────────────────╯
• Working…
› Ask a follow-up…
