tui/tests/snapshots/view_snapshots__turn_navigator_dark_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&turns, Theme::Dark, 100, 24)"
---
  Session 1  ·  Agent                                                                Agent running
              ╭ Jump to a Turn ──────────────────────────────────────────────────────╮
    You       │                                                                      │
      Summar  │  Search  release                                                     │
      ✓  Age  │     1  release checkpoint 00 with verified evidence                  │
    ◆ Garive  │     2  release checkpoint 01 with verified evidence                  │
      ## Rel  │  ›  3  release checkpoint 02 with verified evidence                  │
      • Veri  │     4  release checkpoint 03 with verified evidence                  │
      • Ship  │     5  release checkpoint 04 with verified evidence                  │
      cargo   │     6  release 界 面  keeps a display-width bounded preview across …   │
              │     7  release checkpoint 06 with verified evidence                  │
              │     8  release checkpoint 07 with verified evidence                  │
              │     9  release checkpoint 08 with verified evidence                  │
              │    10  release checkpoint 09 with verified evidence                  │
              │    11  release checkpoint 10 with verified evidence                  │
              │                                                                      │
              │    ↑/↓ select   Home/End edge   Enter jump   Esc close               │
              │                                                                      │
              ╰──────────────────────────────────────────────────────────────────────╯

  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ Ask a follow-up…                                                                             │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
    Esc cancel run
