tui/tests/snapshots/view_snapshots__turn_navigator_light_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&turns, Theme::Light, 100, 24)"
---
  Session 1  ·  Agent                                                                Agent running

    › Summar  ╭ Jump to a Turn ──────────────────────────────────────────────────────╮
      ✓  Age  │                                                                      │
    ◆ Garive  │  Search  release                                                     │
      ## Rel  │     1  release checkpoint 00 with verified evidence                  │
              │     2  release checkpoint 01 with verified evidence                  │
      • Veri  │  ›  3  release checkpoint 02 with verified evidence                  │
      • Ship  │     4  release checkpoint 03 with verified evidence                  │
              │     5  release checkpoint 04 with verified evidence                  │
      cargo   │     6  release 界 面  keeps a display-width bounded preview across …   │
              │     7  release checkpoint 06 with verified evidence                  │
              │     8  release checkpoint 07 with verified evidence                  │
              │     9  release checkpoint 08 with verified evidence                  │
              │    10  release checkpoint 09 with verified evidence                  │
              │    11  release checkpoint 10 with verified evidence                  │
              │                                                                      │
              │    ↑/↓ select   Home/End edge   Enter jump   Esc close               │
              │                                                                      │
              ╰──────────────────────────────────────────────────────────────────────╯


  › Ask a follow-up…
    Esc cancel run
