tui/tests/snapshots/view_snapshots__turn_navigator_mono_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&turns, Theme::Mono, 100, 24)"
---

› Summarize the release plan.

• Completed
  └ Read file

## Release plan
 Jump to a Turn ────────────────────────────────────────────────────────────────────────────────────
Search  release
   1  release checkpoint 00 with verified evidence
   2  release checkpoint 01 with verified evidence
›  3  release checkpoint 02 with verified evidence
   4  release checkpoint 03 with verified evidence
   5  release checkpoint 04 with verified evidence
   6  release 界 面  keeps a display-width bounded preview across terminals
   7  release checkpoint 06 with verified evidence
   8  release checkpoint 07 with verified evidence

  ↑/↓ select   Home/End edge   Enter jump   Esc close
• Working…

› Ask a follow-up…
