tui/tests/snapshots/view_snapshots__unicode_filtered_lists_compact_40x8.snap
---
source: tui/tests/view_snapshots.rs
expression: "format!(\"PROMPT HISTORY\\n{}\\n\\nSESSION PICKER\\n{}\",\nframe(&history, Theme::Mono, 40, 8), frame(&sessions, Theme::Mono, 40, 8))"
---
PROMPT HISTORY
  ╭ Prompt history ──────────────────╮
  │                                  │
  │  Search  type to search          │
  │  › 👨‍👩‍👧‍👦 界 👨‍👩‍👧‍👦 界 👨‍👩‍👧‍👦 界 👨‍👩‍👧‍👦 界 👨‍👩‍👧‍👦 界 👨‍👩‍👧‍👦 界 👨‍👩‍👧‍👦 …   │
  │                                  │
  │    Enter restore   Esc close     │
  │                                  │
  ╰──────────────────────────────────╯

SESSION PICKER
  ╭ Switch session ──────────────────╮
  │                                  │
  │  Filter  type to search          │
  │  › Session 2 · Agent   ● runni…  │
  │                                  │
  │    Enter open   Esc close        │
  │                                  │
  ╰──────────────────────────────────╯
