tui/tests/snapshots/view_snapshots__wide_palette_160x28.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&wide, Theme::Light, 160, 28)"
---
                                Session 1  ·  research-age                                                         Agent running

                                  You      ╭ Command palette ───────────────────────────────────────────────────────╮
                                    Summa  │  Search  type to search                                                │
                                    ✓  Ag  │  › /new              Create session                                    │
                                  ◆ Gariv  │    /sessions         Switch session                                    │
                                    ## Re  │    /jump             unavailable · fewer than two Turns are loaded     │
                                    • Ver  │    /inspect          Open Inspector                                    │
                                    • Shi  │    /status           Connection details                                │
                                    cargo  │    /edit-prompt      Edit draft externally                             │
                                           │    /retry            unavailable · no pending command                  │
                                           │    /reconnect        Resume event stream                               │
                                           │    /cancel           Cancel running turn                               │
                                           │    /theme system     Follow terminal theme                             │
                                           │    /theme dark       Use dark theme                                    │
                                           │    /theme light      Use light theme                                   │
                                           │    /theme mono       Use mono theme                                    │
                                           │    /mouse on         Enable mouse capture next launch                  │
                                           │    /mouse off        Disable mouse capture next launch                 │
                                           │    /copy last        Copy last completion                              │
                                           │    ↑/↓ select   Enter run   Esc close                                  │
                                           │                                                                        │
                                           ╰────────────────────────────────────────────────────────────────────────╯

                                ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
                                │ Ask a follow-up…                                                                             │
                                ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
                                  Esc cancel run
